--- a/app/templates/galleries/artworks.html
+++ b/app/templates/galleries/artworks.html
@@ -7,11 +7,11 @@
 {% block content %}
     <div class="column">
       <h2>Oeuvres</h2>
-        <div class="row" style="justify-content: flex-start;">
+        <div class="row">
       {%if galleries%}
         {%for gallery in galleries%}
         {% if images[gallery.id_gallery] %}
-          <a href="{{ url_for('galleries.gallery') }}">
+          <a href="{{ url_for('galleries.gallery', id_gallery=gallery.id_gallery, name=gallery.name) }}">
             <img src="{{ url_for('static', filename=images[gallery.id_gallery].path_to_file) }}" alt="{{ gallery.name }}" style="height: 250px;">
           </a>
         {% else %}
