--- a/app/templates/create/send.html
+++ b/app/templates/create/send.html
@@ -8,7 +8,7 @@ Envoyer l'email
 <div class="block" style=" width: 40%;">
     <form method="POST">
         <h5 class="center" style="font-size: 200%; font-weight: 400; padding-left: 10%a;"> Envoyer à :</h5>
-        {% for i in range(no_participants) %}
+        {% for i in range(no_participants-1) %}
         <input list="users{{ i }}" name="users" id="userInput{{ i }}" placeholder="noms d'utilisateurs" class="box-black center" style="width: 100%;" required>
         <div>
             <datalist id="users{{ i }}">
