--- a/app/templates/artists/user_profile.html
+++ b/app/templates/artists/user_profile.html
@@ -28,6 +28,7 @@
         </div> 
       </div>
       
+      {%for gallery in galleries%}
       <div class="profile_proj">
         <div class="column">
           <h3>
@@ -38,16 +39,29 @@
             {%endif%}
             <p>Les projets</p>
           </h3>
-          <div style="margin-left: auto; margin-right: auto;">
-            <div class="between">
-              adwad
-              <p>dawdad</p>
+            <div style="margin-left: auto; margin-right: auto;">
+              <div class="between">
+                {{gallery['name']}}
+                <div class="project"> 
+                {%for artist in artists%}
+                  {%if artist.profile_pic%}
+                    <a href="{{url_for('artists.user_profile', username=artist.username)}}">
+                      <img class="profile-pic" src="{{ url_for('static', filename=artist.profile_pic) }}" alt="Profile Picture" style="height: 40px; width: 40px;">
+                    </a>
+                  {% else %}
+                    <a href="{{url_for('artists.user_profile', username=artist.username)}}">
+                      <img class="profile-pic" src="/static/imgs/profile-pic.webp" alt="default profile pic" style="height: 40px; width: 40px;">
+                    </a>
+                  {% endif %}
+                {%endfor%}
+                </div>
+              </div>
+              <img  src="/static/imgs/ex.jpg" alt="exemple">
+              {{gallery['deadline']}}
             </div>
-            <img  src="/static/imgs/ex.jpg" alt="exemple">
-            date du projet
-          </div>
         </div>
-
+        
+      {%if loop.first%}
         <div id="shape1" style="padding: 20px;justify-content: end;">
           <h5>
             <div style="line-height: 50px;">
@@ -71,7 +85,10 @@
           </h5> 
         <button class="button" onclick="copyEmail()" style="margin: 97.5% 0% 0% 60%">contacter</button>
         </div>
+        {%else%}
+        {%endif%}
       </div>
+      {%endfor%}
     </ul>
   </div>
 {% endblock %}
