--- a/app/templates/create/send.html
+++ b/app/templates/create/send.html
@@ -19,17 +19,17 @@ Envoyer l'email
         </div>
         {% endfor %}
         <div class="lineblk" style="margin-left: 20%; margin-right: 20%;"></div>
-        <h5 class="center">{{ g.gallery['name'] }}</h5>
+        <h5 class="center">{{ gallery['name'] }}</h5>
         <div class="row">
             <div class="box-black-huge column" style="width: 50%; justify-content: start;">
                 <h5 style="text-decoration: underline;">Description</h5>
-                <h5>{{ g.gallery['description'] }}</h5>
+                <h5>{{ gallery['description'] }}</h5>
             </div>
             <div class="column">
-                <h5>Format : {{g.gallery['format']}}</h5>
-                <h5>Participants : {{g.gallery['no_participants']}}</h5>
-                <h5>Délai : {{ g.gallery['deadline'] }}</h5>
-                <h5>Couleur de l'arrière-plan : {{g.gallery['color']}}</h5>
+                <h5>Format : {{gallery['format']}}</h5>
+                <h5>Participants : {{gallery['no_participants']}}</h5>
+                <h5>Délai : {{ gallery['deadline'] }}</h5>
+                <h5>Couleur de l'arrière-plan : {{gallery['color']}}</h5>
             </div>
         </div>
         <button type="submit" class="center button">
